# MTWAS

./: .Rbuildignore  .gitignore  404.html  DESCRIPTION  LICENSE  LICENSE-text.html  LICENSE.html  LICENSE.md  NAMESPACE  README.md  _pkgdown.yml  authors.html  cleanup  config.status  configure  configure.ac  index.html  pkgdown.yml  search.json  sitemap.xml
R/: RcppExports.R  data.R  impute.R  package.R  run_mtwas_easy.R  train_weights.R  twas.R
articles/: index.html  mtwas.html
articles/articles/: mtwas.html
data/: demo.rda  summary_stats.rda  twas_data.rda
data-raw/: DATASET.R
man/: create_pmatrix_from_terms.Rd  demo.Rd  find.index.Rd  format_twas_dat.Rd  impute.E.Rd  run_mtwas_easy.Rd  select.ct.eQTL.Rd  select.ts.eQTL.Rd  soda_model_imp_share.Rd  soda_model_imp_single.Rd  summary_stats.Rd  twas.multi.trait.Rd  twas.res.Rd  twas.single.trait.Rd  twas_data.Rd
reference/: create_pmatrix_from_terms.html  demo.html  find.index.html  format_twas_dat.html  impute.E.html  index.html  run_mtwas_easy.html  select.ct.eQTL.html  select.ts.eQTL.html  soda_model_imp_share.html  soda_model_imp_single.html  summary_stats.html  twas.multi.trait.html  twas.res.html  twas.single.trait.html  twas_data.html
src/: Makevars  Makevars.in  RcppExports.cpp  soda.cpp
tools/: winlibs.R
vignettes/articles/: mtwas.Rmd
